--- a/Day4_study/view/ask.html
+++ b/Day4_study/view/ask.html
@@ -5,13 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/ask.css">
 </head>
 <body>
     <form action="/askquestion" method="POST">
         <h1>Ask a question</h1>
         <textarea name="questionContent" cols="30" rows="10"></textarea>
         <p>200 char remaining</p>
-        <button type="submit">Send</button>
+        <button class="submit-button" type="submit">Send</button>
+        <div class='total-question'></div>
     </form>
+
+    <button class='question-button'>See total number of question</button>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script src="./js/ask.js"></script>
 </body>
 </html>
